updated the image URL  in about.html

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 <br><br>
 <center>
 		<h1>
-			<img style="border: 3px solid red;" src="C:\Users\Hello\Downloads\IMG_20221103_153047.jpg" height="200" width="250px" />
+			<img style="border: 3px solid red;" src="IMG_20221103_153047.jpg" height="200" width="250px" />
 		</h1>
 		<h2>
 			<span style="background: yellow;color: red;"> Adout pidugu prudhvi</span>
